[package]
name = "orbit-integration-tests"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
orbit-client = { path = "../orbit/client" }
orbit-server = { path = "../orbit/server" }
orbit-shared = { path = "../orbit/shared" }
orbit-proto = { path = "../orbit/proto" }
orbit-util = { path = "../orbit/util" }
tokio = { version = "1.48", features = ["full"] }
tokio-test = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }
cucumber = "0.21"
proptest = { version = "1.4", optional = true }
mockall = "0.13"
rand = "0.9"
futures = "0.3"

[features]
default = []

# Phase-specific feature flags
phase-9-features = []
phase-10-features = []
phase-11-features = []
phase-12-features = ["timeseries-features"]
phase-13-features = ["neo4j-features"]
phase-14-features = ["distributed-features"]
phase-15-features = ["arangodb-features"]
phase-16-features = ["graphml-features", "graphrag-features"]
phase-17-features = ["protocol-features"]
phase-18-features = ["cloud-features"]
phase-19-features = ["enterprise-features"]

# Technology-specific feature flags
neo4j-features = []
arangodb-features = []
graphml-features = []
graphrag-features = []
timeseries-features = []
distributed-features = []
protocol-features = []
cloud-features = []
enterprise-features = []

# Test-specific feature flags
property-tests = ["proptest"]
integration-tests = []
performance-tests = []
compatibility-tests = []

# Development and debugging flags
test-logging = []
test-metrics = []
mock-services = []

# Test binaries will be added as integration tests are implemented
# [[test]]
# name = "mock_simple"
# path = "tests/mock_simple.rs"
