[package]
name = "actor-memory-integration-example"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }

# Orbit-RS dependencies
orbit-server = { path = "../../orbit/server" }
orbit-shared = { path = "../../orbit/shared" }

[[bin]]
name = "actor-memory-demo"
path = "src/main.rs"