[package]
name = "benchmarks-demo"
version = "0.1.0"
edition = "2021"
description = "Example demonstrating orbit-shared benchmarking capabilities"

[dependencies]
orbit-shared = { path = "../../orbit/shared" }
tokio = { version = "1.41", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "benchmarks-demo"
path = "src/main.rs"