[package]
name = "distributed-counter-example"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[[example]]
name = "distributed_counter"
path = "../distributed_counter.rs"

[dependencies]
orbit-client = { path = "../../orbit/client" }
orbit-server = { path = "../../orbit/server" }
orbit-shared = { path = "../../orbit/shared" }
orbit-proto = { path = "../../orbit/proto" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4"] }