[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"

[[bin]]
name = "hello-world"
path = "src/main.rs"
doc = false

[dependencies]
orbit-client = { path = "../../orbit/client" }
orbit-server = { path = "../../orbit/server" }
orbit-shared = { path = "../../orbit/shared" }
orbit-proto = { path = "../../orbit/proto" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"