[package]
name = "mcp-advanced-server"
version = "0.1.0"
edition = "2021"
license.workspace = true

[[bin]]
name = "advanced_server"
path = "src/main.rs"

[dependencies]
orbit-protocols = { path = "../../orbit/protocols" }
orbit-shared = { path = "../../orbit/shared" }
orbit-client = { path = "../../orbit/client" }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
# Using SQLx fork with RSA vulnerability fix (RUSTSEC-2023-0071)
# Repository: https://github.com/ravituringworks/sqlx-no-rsa
sqlx = { git = "https://github.com/ravituringworks/sqlx-no-rsa.git", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid"] }
reqwest = { version = "0.11", features = ["json"] }