[package]
name = "mcp-basic-client"
version = "0.1.0"
edition = "2021"
license.workspace = true

[[bin]]
name = "basic_client"
path = "src/main.rs"

[dependencies]
orbit-protocols = { path = "../../orbit/protocols" }
orbit-shared = { path = "../../orbit/shared" }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"