[package]
name = "ml-sql-functions"
version = "0.1.0"
edition = "2021"

[dependencies]
orbit-protocols = { path = "../../orbit/protocols" }
orbit-shared = { path = "../../orbit/shared" }
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"

[[bin]]
name = "ml-example"
path = "src/main.rs"