[package]
name = "multi-model-query-example"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
orbit-shared = { path = "../../orbit-shared" }
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"