[package]
name = "orbitql-example"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "OrbitQL unified multi-model query language example"

[[bin]]
name = "orbitql-example"
path = "src/main.rs"

[dependencies]
# Orbit dependencies
orbit-shared = { path = "../../orbit/shared" }

# Async runtime
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Time 
chrono = { workspace = true }

# UUID
uuid = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }