[package]
name = "pgvector-store-example"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "pgvector-compatible PostgreSQL interface for Orbit vector store"

[dependencies]
orbit-client = { path = "../../orbit-client" }
orbit-shared = { path = "../../orbit-shared" }
orbit-protocols = { path = "../../orbit-protocols" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }

[[bin]]
name = "pgvector-store"
path = "src/main.rs"