[package]
name = "resp-server-example"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "resp-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
orbit-client = { path = "../../orbit-client" }
orbit-protocols = { path = "../../orbit-protocols" }