[package]
name = "resp-server-example"
version = "0.1.0"
edition = "2021"
license = "BSD-3-Clause"
publish = false

[[bin]]
name = "resp-server"
path = "src/main.rs"

[[bin]]
name = "resp-test-client"
path = "src/test_client.rs"

[[bin]]
name = "resp-comprehensive-test"
path = "src/comprehensive_test.rs"

[[bin]]
name = "resp-stress-test"
path = "src/stress_test.rs"

[dependencies]
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
orbit-client = { path = "../../orbit/client" }
orbit-protocols = { path = "../../orbit/protocols" }