[package]
name = "saga-example"
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "saga-example"
path = "src/main.rs"
doc = false

[dependencies]
orbit-shared = { path = "../../orbit/shared" }
tokio = { version = "1.48", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"