[package]
name = "sql-feature-demo"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sql_demo"
path = "src/main.rs"

[dependencies]
orbit-protocols = { path = "../../orbit-protocols" }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
colored = "2.0"
tabled = "0.14"